creation de la classe GestionUtilisateur et de la methode EnregistrerUtilisateur permetant d'enregistrer un utilisateur

--- a/FamHub.1.0.0/FamHub.1.0.0.csproj
+++ b/FamHub.1.0.0/FamHub.1.0.0.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Projectlibrary">
+      <HintPath>..\..\Projectlibrary\Projectlibrary\obj\Debug\Projectlibrary.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
